[tool.poetry]
name = "module212"
version = "0.1.0"
description = ""
authors = ["Strategs <127782103+Strategs@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
alembic = "^1.12.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
